Ignore invalid turn points.

Most notably this happened when a route consists only of one large,
unnamed segment (Yours).
BUG: 285455
(cherry picked from commit 1ca79c65848b1a4dc9eecfe632d45a2e038e4c33)
Also add logic fix (&&=>||) not in original commit.